--- a/index.html
+++ b/index.html
@@ -7,19 +7,17 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <title>LifeUp</title>
-    <link rel="manifest" href="/manifest.webmanifest">
+    <!-- 移除硬编码的 manifest 链接，VitePWA 插件会自动注入正确的链接 -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
       body {
         font-family: 'Inter', sans-serif;
         background-color: #f8fafc;
-        /* Disable text selection for app-like feel */
         user-select: none;
         -webkit-user-select: none;
         -webkit-tap-highlight-color: transparent;
       }
-      /* Hide scrollbar for clean UI in horizontal lists */
       .no-scrollbar::-webkit-scrollbar {
         display: none;
       }
@@ -27,13 +25,12 @@
         -ms-overflow-style: none;
         scrollbar-width: none;
       }
-      /* Safe area variables */
       :root {
         --sat: env(safe-area-inset-top);
         --sab: env(safe-area-inset-bottom);
       }
     </style>
-<script type="importmap">
+  <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@^19.2.3",
@@ -50,6 +47,6 @@
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
